--- a/kalkulator/index.html
+++ b/kalkulator/index.html
@@ -17,7 +17,7 @@
             <div class="angka">C</div>
             <div class="angka">Del</div>
             <div class="angka">.</div>
-            <div class="angka">%</div>
+            <div class="angka">/</div>
             <div class="angka">7</div>
             <div class="angka">8</div>
             <div class=" angka">9</div>
@@ -30,9 +30,9 @@
             <div class="angka">2</div>
             <div class="angka">3</div>
             <div class="angka">+</div>
-            <div class="angka">/</div>
             <div class="angka">0</div>
-            <div class="angka">,</div>
+            <div class="angka">(</div>
+            <div class="angka">)</div>
             <div class="angka">=</div>
 
         </div>
