--- a/kalkulator/index.html
+++ b/kalkulator/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <div class="layar">
-            <input type="text" id="proses">
+            <div id="proses"></div>
         </div>
         <div class="tombol">
             <div class="angka">C</div>
